--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "mitt": "^3.0.1",
     "nanoid": "^5.0.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
